--- a/frontend/jukebox/src/app/song-queue/song-queue.component.html
+++ b/frontend/jukebox/src/app/song-queue/song-queue.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="metaList.size > 0" class="container" style="margin-top: 70px;">
   <h3>Song Queue</h3>
   <div class="row song-row" *ngFor="let meta of metaList.queue;">
-    <div class="col-3">
+    <div class="col-12 col-md-3">
       <img height="200" width="200" src="{{imageURL(meta.mrl)}}">
     </div>
-    <div class="col-9">
+    <div class="col-12 col-md-9">
       <ul class="song-text">
         <li *ngIf="meta.title != ''"><b>Song:</b> {{meta.title}}</li>
         <li *ngIf="meta.title == null || meta.title === ''"><b>Song:</b> {{meta.mrl}}</li>
