--- a/frontend/jukebox/src/app/footer/footer.component.html
+++ b/frontend/jukebox/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-  <p  class="text-xs-center">Copyright 2021, Corner Hill Software. All rights reserved.</p>
+  <p  class="text-xs-center">Version: {{version}}</p>
 </footer>
