--- a/frontend/jukebox/src/app/action-bar/action-bar.component.html
+++ b/frontend/jukebox/src/app/action-bar/action-bar.component.html
@@ -11,7 +11,10 @@
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/add-songs">Add Songs</a>
+        <a class="nav-link" routerLink="/search">Find Songs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/add-songs">List Songs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/play-stream">Internet Radio</a>
